@@ -1,13 +1,14 @@
 environment:
   CONDA_INSTALL_LOCN: C:\\Miniconda36-x64
   matrix:
-    - TARGET_ARCH: x64
-      NPY: 1.16
-      PY: 3.6
 
     - TARGET_ARCH: x64
-      NPY: 1.16
+      NPY: 1.17
       PY: 3.7
+
+    - TARGET_ARCH: x64
+      NPY: 1.17
+      PY: 3.8
 
 platform:
     - x64
@@ -24,18 +25,30 @@ install:
         throw "There are newer queued builds for this pull request, failing early." }
 
   # Add path, activate `conda` and update conda.
-  - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
-  - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true
-  - cmd: conda update conda
-  - cmd: conda config --add channels conda-forge --force
-  - cmd: conda config --set channel_priority strict
-  - cmd: set PYTHONUNBUFFERED=1
-  - cmd: conda install conda-build vs2008_express_vc_python_patch
-  - cmd: call setup_x64
 
-  - cmd: conda.exe create --name TEST python=%PY% numpy=%NPY% cython pip pytest pytest-cov
-  - cmd: conda info --all
-  - cmd: conda activate TEST
+        - set URL="https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe"
+        - curl -fsS -o miniconda3.exe %URL%
+        - start /wait "" miniconda3.exe /InstallationType=JustMe /RegisterPython=0 /S /D=%PYTHON%
+        - "set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+        - call %PYTHON%\Scripts\activate
+        - conda config --set always_yes yes --set changeps1 no --set show_channel_urls true
+        - conda config --add channels conda-forge --force
+        - set PYTHONUNBUFFERED=1
+        - conda install conda-build vs2008_express_vc_python_patch
+        - call setup_x64
+        - conda create --name TEST python=%PY% numpy=%NPY% cython pip pytest pytest-cov
+        - conda activate TEST
+        #  - cmd: call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
+        #  - cmd: conda config --set always_yes yes --set changeps1 no --set show_channel_urls true
+        #  - cmd: conda update conda
+        #  - cmd: conda config --add channels conda-forge --force
+        #  - cmd: conda config --set channel_priority strict
+        #  - cmd: set PYTHONUNBUFFERED=1
+        #  - cmd: conda install conda-build vs2008_express_vc_python_patch
+        #  - cmd: call setup_x64
+        #  - cmd: conda.exe create --name TEST python=%PY% numpy=%NPY% cython pip pytest pytest-cov
+        #  - cmd: conda info --all
+        #  - cmd: conda activate TEST
 
 # Skip .NET project specific build phase.
 build: off
